Feature install optimize (#45)
* optimize install progress for db driver

fixed db driver error when install through web installer

optimize install with db driver

optimize install with db driver

code format

* modified font size and weight for db deiver detection.

---------

Co-authored-by: Edward Yang <edward@innoshop.com>

--- a/innopacks/install/resources/css/app.scss
+++ b/innopacks/install/resources/css/app.scss
@@ -131,6 +131,11 @@ body {
           font-size: 18px;
           font-weight: bold;
           margin-bottom: 20px;
+
+          .driver {
+            font-size: 14px;
+            font-weight: normal;
+          }
         }
 
         .install-content {
