--- a/innopacks/front/resources/css/product-item.scss
+++ b/innopacks/front/resources/css/product-item.scss
@@ -35,6 +35,7 @@
       color: #b00101;
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
       cursor: pointer;
+
       &:hover {
         color: #fff;
         background-color: #b00101;
@@ -54,8 +55,10 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
       a {
         color: inherit;
+
         &:hover {
           text-decoration: underline;
           color: $primary;
@@ -102,6 +105,50 @@
         margin-left: 10px;
         margin-right: 10px;
       }
+    }
+  }
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 1.4rem;
+  margin-bottom: 1.4rem;
+
+  .image {
+    flex: 0 0 200px;
+    margin-bottom: 0;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .product-item-info {
+    flex: 0.2;
+    padding-left: 20px;
+    padding-top: 10px;
+    text-align: left;
+
+    .sub-product-title{
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    .product-bottom {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    .product-price {
+      text-align: left;
+      justify-content: flex-start;
+      .price-old {
+        margin-left: 0;
+      }
+    }
+
+    .add-wishlist{
+      margin-top: 10px;
+      margin-bottom: 20px;
     }
   }
 }
