Arabic language support.
Arabic language support.

Arabic language support.

code format

--- a/innopacks/front/resources/css/bootstrap/bootstrap.scss
+++ b/innopacks/front/resources/css/bootstrap/bootstrap.scss
@@ -76,4 +76,4 @@ $form-validation-states: (
 // );
 
 @import 'bootstrap-icons';
-@import 'node_modules/bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
