fixed plugin logo display

--- a/innopacks/panel/resources/css/page-my-plugins.scss
+++ b/innopacks/panel/resources/css/page-my-plugins.scss
@@ -18,10 +18,11 @@ body.page-my-plugins {
         width: 60px;
         height: 60px;
         flex: 0 0 60px;
-        background-color: #eee;
+        background-color: #EEEEEE;
         border-radius: 20%;
         margin-right: 10px;
         overflow: hidden;
+        border: 1px solid #EEEEEE;
 
         img {
           width: 100%;
